@@ -30,7 +30,9 @@ ARCH := $(shell uname -m | sed -e s/i.86/i386/ -e s/amd64/x86_64/)
 # (You'll need some #ifdef for your unsupported  plattform!)
 ifneq ($(ARCH),i386)
 ifneq ($(ARCH),x86_64)
+ifneq ($(ARCH),sparc64)
 $(error arch $(ARCH) is currently not supported)
+endif
 endif
 endif
 
