@@ -9,6 +9,8 @@ Quake II 4.03 to 4.10
 - Reenable support for gamma via SDL, since the upstream
   bug was fixed with SDL 1.2.15. Gamma via X11 can be
   forced by defining X11GAMMA at compile time.
+- Add support for big endian architectures and enable
+  the build on SPARC64 CPUs. (by Kieron Gillespie)
 
 Quake II 4.02 to 4.03
 - Fix wrong function call in the Quake II file system.
